--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html lang="ja">
-<head>
-    <meta charset="UTF-8">
-	<link rel="stylesheet" href="/css/site.css" media="all">
-    <title>Jedie is Awesome!</title>
-</head>
-<body>
-{{ content }}
-</body>
+<html>
+  {% include head.html %}
+  <body>
+    {% include header.html %}
+    <div class="page-content">
+      <div class="wrapper">
+        {{ content }}
+      </div>
+    </div>
+    {% include footer.html %}
+    {% include scripts.html %}
+  </body>
 </html>
